<resources>
    <string name="app_name">Weekly Diet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hint_day">Day Of The Week</string>
    <string name="hint_menu">Todays Menu</string>
    <string name="title_activity_edit_diet">Edit your Diet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dinner_always">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="diet_today">diet</string>
    <string name="title_edit_diet">edit</string>
    <string name="dinner_label">Dinner Today</string>
    <string name="dinner_title">Dinner</string>
    <string name="drink_title">Drink</string>
    <string name="drink_label">Drink</string>
    <string name="nutrient_title">Nutrients</string>
    <string name="nutrients_label">Nutrients</string>
    <string name="image_position">Diet Image</string>
    <string name="dinner_today_activity">Dinner Today</string>
</resources>